--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ td > .call-flow {
 	
 .portal_table tr td {
 	margin:10px;
-	padding:10px;
+	padding:8px;
 	box-shadow: inset 0 0 2px #000, inset 0 0 2px #000, inset 0 0 2px #000;
 }
 
@@ -72,4 +72,10 @@ td > .call-flow {
 	padding:4px 9px 4px 9px;
 	border-radius:7px;
 	font-size:1.2em;
+}
+
+select {
+	font-size:1.1em;
+	border-radius: 9px;
+	padding:2px;
 }
